--- a/pom.xml
+++ b/pom.xml
@@ -234,54 +234,6 @@
 			</configuration>
 		</plugin>
 
-  		<plugin>
-			<groupId>org.asciidoctor</groupId>
-			<artifactId>asciidoctor-maven-plugin</artifactId>
-			<version>2.1.0</version>
- 			
-     		<configuration>
-     			<requires>
-     			       	<!-- Tried:
-		            	sudo apt install ruby
-		            	sudo gem install asciidoctor-diagram
-		            	 -->
-     				<require>asciidoctor-diagram</require>
-     			</requires>
-     		</configuration>
-     		<dependencies>
-                 <dependency>
-                    <groupId>org.asciidoctor</groupId>
-                    <artifactId>asciidoctor-maven-plugin</artifactId>
-                    <version>2.1.0</version>
-                </dependency>
-                
-                <dependency>
-		            <groupId>org.asciidoctor</groupId>
-		            <artifactId>asciidoctorj-diagram</artifactId>
-		            <version>2.1.0</version>
-		        </dependency>
-     		</dependencies>
-     		<executions>
-     			<execution>
-     				<id>generate-html-doc</id>
-     				<phase>generate-resources</phase>
-     				<goals>
-     					<goal>process-asciidoc</goal>
-     				</goals>
-     				<configuration>
-      					<backend>html5</backend>   
-     
-     					<outputDirectory>target/site/mydocs</outputDirectory>
-     					<attributes>
-			                <source-highlighter>coderay</source-highlighter>
-			                <coderay-css>style</coderay-css>
-      					</attributes>
-      					<preserveDirectories>true</preserveDirectories>
-     				</configuration>
-     			</execution>
-     		</executions>
-     		
-		</plugin>
 
 		<plugin>
         	<groupId>org.apache.maven.plugins</groupId>
@@ -291,35 +243,101 @@
   	</plugins>
   </build>
   
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.2.0</version>
-        <configuration>
-          <doclint>none</doclint> <!-- Temp, ignore (numerous) missing docs -->
-          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
-        </configuration>
-        <reportSets>
-          <reportSet>
-            <id>aggregate</id>
-            <inherited>false</inherited>        
-            <reports>
-              <report>aggregate</report>
-            </reports>
-          </reportSet>
-          <reportSet>
-            <id>default</id>
-            <reports>
-            <!-- Temp
-              <report>javadoc</report>
-               -->
-            </reports>
-          </reportSet>
-        </reportSets>
-        
-      </plugin>
-    </plugins>
-  </reporting>
+  <!-- **** PROFILES **** -->
+  
+  <profiles>
+  	<profile>
+  		  <id>Site</id>
+  		  <activation>
+  			<activeByDefault>false</activeByDefault>
+  		  </activation>
+  		  <reporting>
+		    <plugins>
+		      <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-javadoc-plugin</artifactId>
+		        <version>3.2.0</version>
+		        <configuration>
+		          <doclint>none</doclint> <!-- Temp, ignore (numerous) missing docs -->
+		          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+		        </configuration>
+		        <reportSets>
+		          <reportSet>
+		            <id>aggregate</id>
+		            <inherited>false</inherited>        
+		            <reports>
+		              <report>aggregate</report>
+		            </reports>
+		          </reportSet>
+		          <reportSet>
+		            <id>default</id>
+		            <reports>
+		            <!-- Temp
+		              <report>javadoc</report>
+		               -->
+		            </reports>
+		          </reportSet>
+		        </reportSets>
+		        
+		      </plugin>
+		    </plugins>
+  	      </reporting>
+  		
+		  <build>
+		  	<plugins>
+		  		<plugin>
+					<groupId>org.asciidoctor</groupId>
+					<artifactId>asciidoctor-maven-plugin</artifactId>
+					<version>2.1.0</version>
+		 			
+		     		<configuration>
+		     			<requires>
+		     			       	<!-- Tried:
+				            	sudo apt install ruby
+				            	sudo gem install asciidoctor-diagram
+				            	 -->
+		     				<require>asciidoctor-diagram</require>
+		     			</requires>
+		     		</configuration>
+		     		<dependencies>
+		                 <dependency>
+		                    <groupId>org.asciidoctor</groupId>
+		                    <artifactId>asciidoctor-maven-plugin</artifactId>
+		                    <version>2.1.0</version>
+		                </dependency>
+		                
+		                <dependency>
+				            <groupId>org.asciidoctor</groupId>
+				            <artifactId>asciidoctorj-diagram</artifactId>
+				            <version>2.1.0</version>
+				        </dependency>
+		     		</dependencies>
+		     		<executions>
+		     			<execution>
+		     				<id>generate-html-doc</id>
+		     				<phase>generate-resources</phase>
+		     				<goals>
+		     					<goal>process-asciidoc</goal>
+		     				</goals>
+		     				<configuration>
+		      					<backend>html5</backend>   
+		     
+		     					<outputDirectory>target/site/mydocs</outputDirectory>
+		     					<attributes>
+					                <source-highlighter>coderay</source-highlighter>
+					                <coderay-css>style</coderay-css>
+		      					</attributes>
+		      					<preserveDirectories>true</preserveDirectories>
+		     				</configuration>
+		     			</execution>
+		     		</executions>
+		     		
+				</plugin>
+			</plugins>
+		  </build>  		
+  		
+  		
+  	</profile>
+  	
+  </profiles>
 </project>
