--- a/org.sirius.backend.jvm/pom.xml
+++ b/org.sirius.backend.jvm/pom.xml
@@ -1,79 +1,98 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>org.sirius.backend.jvm</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>org.sirius.backend.jvm</artifactId>
 
-  <parent>
-    <groupId>org.sirius</groupId>
-    <artifactId>parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
+	<parent>
+		<groupId>org.sirius</groupId>
+		<artifactId>parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 
-  <packaging>jar</packaging>
+	<packaging>jar</packaging>
 
-  <properties>
-<!--   	<version.asm>7.3.1</version.asm> -->
- <!--  	<version.asm>9.1</version.asm> -->
-  </properties>
-  
-  <dependencies>
-  	<dependency>
-	    <groupId>org.sirius</groupId>
-	    <artifactId>org.sirius.common</artifactId>
-  	</dependency>
-  
-  	<dependency>
-	    <groupId>org.sirius</groupId>
-	    <artifactId>org.sirius.frontend</artifactId>
-  	</dependency>
+	<properties>
+		<!--   	<version.asm>7.3.1</version.asm> -->
+		<!--  	<version.asm>9.1</version.asm> -->
+	</properties>
 
-   	<dependency>
-	    <groupId>org.sirius</groupId>
-	    <artifactId>org.sirius.backend.core</artifactId>
-  	</dependency>
-  
-   	<dependency>
-	    <groupId>org.sirius</groupId>
-	    <artifactId>org.sirius.sdk</artifactId>
-  	</dependency>
-  
-  	<dependency>
-	    <groupId>org.sirius</groupId>
-	    <artifactId>org.sirius.runtime</artifactId>
-<!-- 	    <scope>test</scope> -->
-  	</dependency>
-  
-      <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
-	<dependency>
-	    <groupId>org.ow2.asm</groupId>
-	    <artifactId>asm</artifactId>
-	    <version>${libs.asm.version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.ow2.asm</groupId>
-	    <artifactId>asm-util</artifactId>
-	    <version>${libs.asm.version}</version>
-	    <scope>test</scope>
-	</dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.sirius</groupId>
+			<artifactId>org.sirius.common</artifactId>
+		</dependency>
 
-<!--    <dependency>
+		<dependency>
+			<groupId>
+				org.sirius</groupId>
+			<artifactId>org.sirius.frontend</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>
+				org.sirius</groupId>
+			<artifactId>org.sirius.backend.core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>
+				org.sirius</groupId>
+			<artifactId>org.sirius.sdk</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>
+				org.sirius</groupId>
+			<artifactId>org.sirius.runtime</artifactId>
+			<!-- 	    <scope>test</scope> -->
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
+		<dependency>
+			<groupId>
+				org.ow2.asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>${libs.asm.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>
+				org.ow2.asm</groupId>
+			<artifactId>asm-util</artifactId>
+			<version>${libs.asm.version}</version>
+			<scope>
+				test</scope>
+		</dependency>
+
+		<!--    <dependency>
      <groupId>org.testng</groupId>
-     <artifactId>testng</artifactId>
+		<artifactId>testng</artifactId>
      <scope>test</scope>
    </dependency>
  -->
- 	<dependency>
-		<groupId>org.junit.jupiter</groupId>
-		<artifactId>junit-jupiter-api</artifactId>
-	</dependency>
-	<dependency>
-		<groupId>org.junit.jupiter</groupId>
-		<artifactId>junit-jupiter-params</artifactId>
-	</dependency>
-    <dependency>
-		<groupId>org.hamcrest</groupId>
-		<artifactId>hamcrest</artifactId>
-		<scope>test</scope>
-	</dependency>
-   
-  </dependencies>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>
+				junit-jupiter-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>
+				hamcrest</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
 </project>
