--- a/org.sirius.backend.jvm/pom.xml
+++ b/org.sirius.backend.jvm/pom.xml
@@ -95,4 +95,16 @@
 		</dependency>
 
 	</dependencies>
+
+	<reporting>
+		<plugins>
+<!--			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+-->		</plugins>
+	</reporting>
 </project>
