--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     
 <!--    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>-->
-    <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
+<!--    <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>-->
 <!--    <junit-jupiter.version>5.9.1</junit-jupiter.version> -->
     <junit-jupiter.version>5.9.2</junit-jupiter.version>
     
@@ -171,7 +171,7 @@
   			<plugin>
 	          <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-site-plugin</artifactId>
-              <version>3.9.1</version>
+              <version>4.0.0-M7</version>
               <configuration>
               
 <!-- 		        <asciidoc>
@@ -183,24 +183,45 @@
  		      </configuration>
               <dependencies>
               
-                 <dependency>
+<!--                 <dependency>
                     <groupId>org.asciidoctor</groupId>
                     <artifactId>asciidoctor-maven-plugin</artifactId>
-                    <version>2.1.0</version>
+                    <version>2.2.3</version>
                 </dependency>
                 
                 <dependency>
 		            <groupId>org.asciidoctor</groupId>
 		            <artifactId>asciidoctorj-diagram</artifactId>
-		            <version>2.1.0</version>
+		            <version>2.2.7</version>
 		        </dependency>
-
+-->
                </dependencies>
   			</plugin>
 			<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
 			  <artifactId>maven-project-info-reports-plugin</artifactId>
-			  <version>3.1.1</version>
+			  <version>3.4.2</version>
+        	</plugin>
+        	
+        	<plugin>
+        	  <groupId>org.apache.maven.plugins</groupId>
+        	  <artifactId>maven-surefire-plugin</artifactId>
+        	  <version>3.0.0</version>
+        	</plugin>
+        	<plugin>
+        	  <groupId>org.apache.maven.plugins</groupId>
+        	  <artifactId>maven-surefire-report-plugin</artifactId>
+        	  <version>3.0.0</version>
+        	</plugin>
+        	<plugin>
+        	  <groupId>org.apache.maven.plugins</groupId>
+        	  <artifactId>maven-failsafe-plugin</artifactId>
+        	  <version>2.22.2</version>
+        	</plugin>
+        	<plugin>
+        	  <groupId>org.apache.maven.plugins</groupId>
+        	  <artifactId>maven-javadoc-plugin</artifactId>
+        	  <version>3.5.0</version>
         	</plugin>
         </plugins>
   	</pluginManagement>
@@ -224,7 +245,6 @@
 		<plugin>
 		 	<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
-			<version>${maven-surefire-plugin.version}</version>
 	
 			<configuration>
 				<argLine>-Xmx1024m</argLine>
@@ -232,14 +252,26 @@
 		</plugin>
 
 
-		<plugin>
+<!--		<plugin>
         	<groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-site-plugin</artifactId>
         </plugin>
-	
+-->	
   	</plugins>
   </build>
-  
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+			</plugin>
+			<plugin>
+	        	<groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-site-plugin</artifactId>
+	        </plugin>
+		</plugins>
+	</reporting>  
   <!-- **** PROFILES **** -->
   
   <profiles>
@@ -250,10 +282,10 @@
   		  </activation>
   		  <reporting>
 		    <plugins>
+				
 		      <plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-javadoc-plugin</artifactId>
-		        <version>3.5.0</version>
 		        <configuration>
 		          <doclint>none</doclint> <!-- Temp, ignore (numerous) missing docs -->
 		          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
@@ -275,8 +307,16 @@
 		            </reports>
 		          </reportSet>
 		        </reportSets>
-		        
 		      </plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+		      
 		    </plugins>
   	      </reporting>
   		
@@ -285,30 +325,32 @@
 		  		<plugin>
 					<groupId>org.asciidoctor</groupId>
 					<artifactId>asciidoctor-maven-plugin</artifactId>
-					<version>2.1.0</version>
-		 			
-		     		<configuration>
-		     			<requires>
+					<!--<version>2.1.0</version>-->
+
 		     			       	<!-- Tried:
 				            	sudo apt install ruby
 				            	sudo gem install asciidoctor-diagram
 				            	 -->
+		     		<configuration>
+		     			<requires>
 		     				<require>asciidoctor-diagram</require>
 		     			</requires>
 		     		</configuration>
+		     		
 		     		<dependencies>
 		                 <dependency>
 		                    <groupId>org.asciidoctor</groupId>
 		                    <artifactId>asciidoctor-maven-plugin</artifactId>
-		                    <version>2.1.0</version>
+		                    <version>2.2.3</version>
 		                </dependency>
 		                
 		                <dependency>
 				            <groupId>org.asciidoctor</groupId>
 				            <artifactId>asciidoctorj-diagram</artifactId>
-				            <version>2.1.0</version>
+		                    <version>2.2.7</version>
 				        </dependency>
 		     		</dependencies>
+		 			
 		     		<executions>
 		     			<execution>
 		     				<id>generate-html-doc</id>
@@ -328,7 +370,7 @@
 		     				</configuration>
 		     			</execution>
 		     		</executions>
-		     		
+
 				</plugin>
 			</plugins>
 		  </build>  		
